crates/rtd-display/src/v2/snapshots/sui_display__v2__parser__tests__enum_literal_positional_trailing.snap
---
source: crates/rtd-display/src/v2/parser.rs
expression: "strands(r#\"{0x1::option::Option<u64>::Some#1(42u64, 43u64, 44u64}\"#)"
---
Error: Unexpected '}' at offset 53, expected one of ',', or ')'
