crates/rtd-display/src/v2/snapshots/sui_display__v2__parser__tests__enum_named_literals.snap
---
source: crates/rtd-display/src/v2/parser.rs
expression: "strands(\"{ 0x1::option::Option<u64>::Some#1 { value: 42, } \\\n             | 0x1::option::Option<u32>::1 { value: 43u32 } \\\n             | 0x1::option::Option<u16>::None#0 {} }\")"
---
{ 0x0000000000000000000000000000000000000000000000000000000000000001::option::Option<u64>::Some#1 {
      value: 42u64,
  }
| 0x0000000000000000000000000000000000000000000000000000000000000001::option::Option<u32>::1 {
      value: 43u32,
  }
| 0x0000000000000000000000000000000000000000000000000000000000000001::option::Option<u16>::None#0
}
