crates/rtd-display/src/v2/snapshots/sui_display__v2__parser__tests__hex_literal_invalid_char.snap
---
source: crates/rtd-display/src/v2/parser.rs
expression: "strands(r#\"{x'123g'}\"#)"
---
Error: Hex string "123g" at offset 3 contains invalid character
