crates/rtd-display/src/v2/snapshots/sui_display__v2__parser__tests__hex_literal_odd_length.snap
---
source: crates/rtd-display/src/v2/parser.rs
expression: "strands(r#\"{x'123'}\"#)"
---
Error: Odd number of characters in hex string "123" at offset 3
